app/build/intermediates/cxx/Debug/5k5z1329/logs/arm64-v8a/build_stdout_launcher.txt
ninja: Entering directory `/workspaces/NativeLauncher/app/.cxx/Debug/5k5z1329/arm64-v8a'
[1/3] Building C object CMakeFiles/launcher.dir/home/codespace/android-sdk/ndk/25.1.8937393/sources/android/native_app_glue/android_native_app_glue.c.o
[2/3] Building CXX object CMakeFiles/launcher.dir/main.cpp.o
FAILED: CMakeFiles/launcher.dir/main.cpp.o 
/home/codespace/android-sdk/ndk/25.1.8937393/toolchains/llvm/prebuilt/linux-x86_64/bin/clang++ --target=aarch64-none-linux-android21 --sysroot=/home/codespace/android-sdk/ndk/25.1.8937393/toolchains/llvm/prebuilt/linux-x86_64/sysroot -Dlauncher_EXPORTS -I/home/codespace/android-sdk/ndk/25.1.8937393/sources/android/native_app_glue -g -DANDROID -fdata-sections -ffunction-sections -funwind-tables -fstack-protector-strong -no-canonical-prefixes -D_FORTIFY_SOURCE=2 -Wformat -Werror=format-security  -std=c++17 -Os -fno-exceptions -fno-rtti -fno-limit-debug-info  -fPIC -MD -MT CMakeFiles/launcher.dir/main.cpp.o -MF CMakeFiles/launcher.dir/main.cpp.o.d -o CMakeFiles/launcher.dir/main.cpp.o -c /workspaces/NativeLauncher/app/src/main/cpp/main.cpp
/workspaces/NativeLauncher/app/src/main/cpp/main.cpp:96:42: error: use of undeclared identifier 'buf'
                    if((y+j)>=0 && (y+j)<buf.height && (cx+i)<w) // safe check
                                         ^
1 error generated.
ninja: build stopped: subcommand failed.
